--- a/Source/TreeMaker.dproj
+++ b/Source/TreeMaker.dproj
@@ -113,6 +113,10 @@
             <Form>formResolution</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uAbout.pas">
+            <Form>frmAbout</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
